@@ -1,3 +1,8 @@
+2012-03-21 Graeme Stewart <graeme.andrew.stewart@cern.ch>
+    * Move option for hybrid POOL merger (fastPoolMerge) inside the MergePoolJobTransform itself
+    * Ensure that merged file is validated after events have been added
+    * Tagging as PATJobTransforms-00-04-02 
+
 2012-03-19 Graeme Stewart <graeme.andrew.stewart@cern.ch>
     * Improve robustness of hybrid merging:
         * Do not use shell execution
